--- a/aaron_eda.ipynb
+++ b/aaron_eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Anaylizing the Tiatinc Survial Record\n",
+    "# Anaylizing the Tiatinc Survial Record\n",
     "## By: Aaron Pelton  Date: September 28, 2024\n",
     "## A review of who lived through the titanic accident. The project examines the ages of surviors and those lost.  The project also considers what class the passagners were in."
    ]
