--- a/aaron_eda.ipynb
+++ b/aaron_eda.ipynb
@@ -6,7 +6,140 @@
    "source": [
     "# Anaylizing the Tiatinc Survial Record\n",
     "## By: Aaron Pelton  Date: September 28, 2024\n",
-    "## A review of who lived through the titanic accident. The project examines the ages of surviors and those lost.  The project also considers what class the passagners were in."
+    "## A review of those who lived through the titanic accident. The project examines the ages of surviors and those lost.  The project also considers what class the passagners were in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jupyterlab\n",
+    "import numpy\n",
+    "import pandas as pd\n",
+    "import pyarrow\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   survived  pclass     sex   age  sibsp  parch     fare embarked   class  \\\n",
+      "0         0       3    male  22.0      1      0   7.2500        S   Third   \n",
+      "1         1       1  female  38.0      1      0  71.2833        C   First   \n",
+      "2         1       3  female  26.0      0      0   7.9250        S   Third   \n",
+      "3         1       1  female  35.0      1      0  53.1000        S   First   \n",
+      "4         0       3    male  35.0      0      0   8.0500        S   Third   \n",
+      "5         0       3    male   NaN      0      0   8.4583        Q   Third   \n",
+      "6         0       1    male  54.0      0      0  51.8625        S   First   \n",
+      "7         0       3    male   2.0      3      1  21.0750        S   Third   \n",
+      "8         1       3  female  27.0      0      2  11.1333        S   Third   \n",
+      "9         1       2  female  14.0      1      0  30.0708        C  Second   \n",
+      "\n",
+      "     who  adult_male deck  embark_town alive  alone  \n",
+      "0    man        True  NaN  Southampton    no  False  \n",
+      "1  woman       False    C    Cherbourg   yes  False  \n",
+      "2  woman       False  NaN  Southampton   yes   True  \n",
+      "3  woman       False    C  Southampton   yes  False  \n",
+      "4    man        True  NaN  Southampton    no   True  \n",
+      "5    man        True  NaN   Queenstown    no   True  \n",
+      "6    man        True    E  Southampton    no   True  \n",
+      "7  child       False  NaN  Southampton    no  False  \n",
+      "8  woman       False  NaN  Southampton   yes  False  \n",
+      "9  child       False  NaN    Cherbourg   yes  False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the Titanic dataset into DataFrame\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Inspect first rows of the DataFrame\n",
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(891, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(df.shape)\n",
+    "#print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of females: 314\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of female passengers\n",
+    "fcount = (df['sex'] == 'female').sum()  \n",
+    "print(f\"Number of females: {fcount}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of males: 577\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of male passengers\n",
+    "mcount = (df['sex'] == 'male').sum()  \n",
+    "print(f\"Number of males: {mcount}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of children: 83\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of children passengers\n",
+    "ccount = (df['who'] == 'child').sum()  \n",
+    "print(f\"Number of children: {ccount}\")"
    ]
   }
  ],
@@ -17,7 +150,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.5"
   }
  },
