--- a/aaron_eda.ipynb
+++ b/aaron_eda.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anaylizing the Titanic Survial Record\n",
+    "# Analyzing the Titanic Survial Record\n",
     "## By: Aaron Pelton  \n",
     "## Date: September 28, 2024\n",
-    "## A review of those who lived through the titanic accident. The project examines the ages of survivors and those lost.  \n",
-    "## The project puts a special intrest in five age groups.  This project also takes a brief view of the different classes the passagners were in."
+    "## A review of those who lived through the Titanic accident. The project examines the ages of survivors and those lost.  \n",
+    "## The project puts a special interest in five age groups.  This project also takes a brief view of the different classes the passengers were in."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first set of code is to determine the overall totals.  We only spend a brief walk by of this data."
+    "## The first set of code is to determine the overall totals.  We only spend a brief walk by of this data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +160,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that about 35% of passagners survived.  We also see that about 81% of the missing were men.\n",
+    "## We note that about 35% of passengers survived.  We also see that about 81% of the missing were men.\n",
     "\n",
-    "The next set of code gives the overall numbers as seen by class."
+    "## The next set of code gives the overall numbers as seen by class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -228,9 +228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the First and Second class had roungly the same number of passengers go missing.  While about 67% of those missing were in the Thrid Class.\n",
+    "## We see that the First and Second class had roughly the same number of passengers go missing, while about 67% of those missing were in the Third Class.\n",
     "\n",
-    "The next section of code defines the numbers for children ages 1 to 15."
+    "## The next section of code defines the numbers for children ages 1 to 15."
    ]
   },
   {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -370,14 +370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that about 55% of the children survived.  And about the same amount of boys and girls surviving.  \n",
+    "## Here we see that about 55% of the children survived and about the same amount of boys and girls surviving.  \n",
     "\n",
-    "The next set of code determines the numbers for young adults on board."
+    "## The next set of code determines the numbers for young adults on board."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -442,14 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -514,14 +507,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that there were about 83% more young men then young women aboard.  We also see that for every young women that went missing there were six young men.\n",
+    "## Here we see that there were about 83% more young men then young women aboard.  We also see that for every young woman that went missing there were six young men.\n",
     "\n",
-    "The next set of code calcultes the numbers for middle aged 31 - 45."
+    "## The next set of code calculates the numbers for middle aged 31 - 45."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -651,28 +644,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see there were about 77% more middle aged men than middle aged women aboard.  And again for every one middle aged woman who went missing there were six middle aged men who were missing.\n",
+    "## Here we see there were about 77% more middle aged men than middle aged women aboard.  And again for every one middle aged woman who went missing there were six middle aged men who were missing.\n",
     "\n",
-    "Next we will look at the senior age group from 46 to 60."
+    "## Next we will look at the senior age group from 46 to 60."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Number of adults: 79 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      " Number of adults: 79 \n",
       " Number of women: 27 \n",
       " Number of men: 52 \n",
       " Number of surviving adults: 33 \n",
@@ -730,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -795,14 +781,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that there are some 3 times less passagers in this age group as compared to young adults and middle aged groups.  We see over half went missing with twice as many women surviving then men.\n",
+    "## We see that there are some 3 times less passengers in this age group as compared to young adults and middle aged groups.  We see over half went missing with twice as many women surviving then men.\n",
     "\n",
-    "The next section of code counts the elderly aboard."
+    "## The next section of code counts the elderly aboard."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -932,14 +918,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see this age group has the highest missing numbers of all groups with only 22@ or 5 passengers surving. Allmost all in the age group were men with just three women aboard.\n",
+    "## We see this age group has the highest missing numbers of all groups with only 22% or 5 passengers surving. Almost all in the age group were men with just three women aboard.\n",
     "\n",
-    "Next I calcuate the numbers for passagers who did not have there age recorded.  The numbers will be used later in the project."
+    "## Next I calculate the numbers for passengers who did not have their age recorded.  The numbers will be used later in the project."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1073,12 +1059,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that so many passagers in the Third Class who went missing were young adults.  There are also a lot passagers whose name were not recorded that were missing from Third Class.  This graph really shows the magnitude of loss for Third Class passagners. "
+    "## Here we see that so many passengers in the Third Class who went missing were young adults.  There are also a lot passengers whose names were not recorded that were missing from Third Class.  This graph really shows the magnitude of loss for Third Class passengners. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1145,12 +1131,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For second class, we see the same stair step as Thrid Class were the most who went missing were young adults, followed by middle aged, then seniors.  We see a much higher surviavl rate with all the children in second class surviving.  We note there were a lot less in the category of no age recorded for 2nd Class."
+    "## For Second Class, we see the same stair step as Third Class were the most who went missing were young adults, followed by middle aged, then seniors.  We see a much higher survival rate, with all the children in Second Class surviving.  We note there were a lot less in the category of no age recorded for 2nd Class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1217,12 +1203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see an astonding number of suvivors in First Class as compared with 2nd and 3rd Class.  We see for the first three age groups more survived then went mssing by 3 to 1.  We do see some a higher amount of seniors going missing in this class."
+    "## Here we see an astounding number of suvivors in First Class as compared with 2nd and 3rd Class.  We see for the first three age groups more survived then went mssing by 3 to 1.  We do see some a higher amount of seniors going missing in this class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1289,19 +1275,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have two charts left in our study.  Here we see, for the female passengers, a high survival rate in all categories.  In most cases each age group had 3 times as many survivors as compared to those who went missing."
+    "## We have two charts left in our study.  Here we see, for the female passengers, a high survival rate in all categories.  In most cases each age group had 3 times as many survivors as compared to those who went missing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1368,10 +1347,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This chart of ages for men stands in contrast to that of the women.  Here we see five times more going missing then surviving except for the boys age group.  We also see most of the young men in the 16 -30 category went missing.\n",
+    "## This chart of ages for men stands in contrast to that of the women.  Here we see five times more going missing then surviving except for the boys age group.  We also see most of the young men in the 16 -30 category went missing.\n",
     "\n",
     "\n",
-    "The focus of this project was to look at the data from the lense of age groups while showing the genger and class information with the age groups.  It was very eye opening for me to see how each group was affected and who may have given up a seat for another.\n",
+    "## The focus of this project was to look at the data from the lens of age groups while showing the gender and class information with the age groups.  It was very eye opening for me to see how each group was affected and who may have given up a seat for another.\n",
     "\n",
     "\n",
     "\n"
